[gd_scene load_steps=3 format=3 uid="uid://b1seh7j32k3e6"]

[ext_resource type="Script" path="res://maps/scripts/main_menu.gd" id="1_8musf"]
[ext_resource type="Texture2D" uid="uid://dnvpv283gywkn" path="res://assets/pocketwatch/pocketwatch.png" id="1_11whw"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_8musf")

[node name="BackgroundTexture" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_11whw")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="LeftVBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="MainMenuVBox" type="VBoxContainer" parent="MarginContainer/HBoxContainer/LeftVBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 25
alignment = 2

[node name="Label" type="Label" parent="MarginContainer/HBoxContainer/LeftVBoxContainer/MainMenuVBox"]
layout_mode = 2
size_flags_vertical = 8
text = "Tick Tack"
horizontal_alignment = 1
vertical_alignment = 1

[node name="StartButton" type="Button" parent="MarginContainer/HBoxContainer/LeftVBoxContainer/MainMenuVBox"]
layout_mode = 2
size_flags_vertical = 8
text = "Play"

[node name="VersionLabel" type="Label" parent="MarginContainer/HBoxContainer/LeftVBoxContainer/MainMenuVBox"]
layout_mode = 2
size_flags_vertical = 8
text = "Version: 1.0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CenterVBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="RightVBoxContainer2" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="MarginContainer/HBoxContainer/RightVBoxContainer2"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "Programmers:
Jakub Hubáček
Jan Mesarč

Art and Music:
Meru"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="MarginContainer/HBoxContainer/LeftVBoxContainer/MainMenuVBox/StartButton" to="." method="_on_start_button_pressed"]
